добавил контейнер для дроп-дауна гостей

--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -176,6 +176,7 @@ block content
               placeholder: "3 гостя, 1 младенец",
               isBigLabel: true
             })
+            div(class="drop-down-container" id="drop-down-guest-container")
           .filter__item
             +rangeSlider({ title: "Диапазон цены", min: "5 000", max: "10 000" })
             p.filter__explan Стоимость за сутки пребывания в номере
