добавил контейнер для drop-down

--- a/src/components/total-card/total-card.pug
+++ b/src/components/total-card/total-card.pug
@@ -40,6 +40,7 @@ mixin totalCard()
         isHaveIcon: true,
         placeholder: "3 гостя"
       })
+      div(class="drop-down-container" id="drop-down-total-container")
       .total-card__calc
         .total-card__calc-item
           p.total-card__calc-text 9 990₽ х 4 суток
