подключил стили date-picker

--- a/src/page/room-details/room-details.scss
+++ b/src/page/room-details/room-details.scss
@@ -9,6 +9,7 @@
 @import "../../components/likebtn/likebtn";
 @import "../../components/bullet-list/bullet-list.scss";
 @import "../../components/total-card/total-card";
+@import "../../components/date-picker/date-picker";
 @import "../../components/drop-down/drop-down";
 @import "../../components/input/input.scss";
 @import "../../components/footer/footer.scss";
