--- a/src/page/room-details/room-details.scss
+++ b/src/page/room-details/room-details.scss
@@ -3,14 +3,14 @@
 @import "../../components/logo/logo.scss";
 @import "../../components/button/button.scss";
 @import "../../components/main-menu/main-menu.scss";
-@import "../../components/pie-chart/pie-chart";
-@import "../../components/features/features";
-@import "../../components/comment/comment";
-@import "../../components/likebtn/likebtn";
+@import "../../components/pie-chart/pie-chart.scss";
+@import "../../components/features/features.scss";
+@import "../../components/comment/comment.scss";
+@import "../../components/likebtn/likebtn.scss";
 @import "../../components/bullet-list/bullet-list.scss";
-@import "../../components/total-card/total-card";
-@import "../../components/date-picker/date-picker";
-@import "../../components/drop-down/drop-down";
+@import "../../components/total-card/total-card.scss";
+@import "../../components/date-picker/date-picker.scss";
+@import "../../components/drop-down/drop-down.scss";
 @import "../../components/input/input.scss";
 @import "../../components/footer/footer.scss";
 @import "../../components/nav-menu/nav-menu.scss";
