--- a/src/components/total-card/total-card.pug
+++ b/src/components/total-card/total-card.pug
@@ -30,6 +30,7 @@ mixin totalCard()
           placeholder: "23.08.2019",
           isDarkPlaceholder: true
         })
+        div(id="date-picker-container" class="date-picker-container")
       +input({
         id: "number-total-guests-input",
         isFakeInput: true,
