totalCard принимает объейкт options

--- a/src/components/total-card/total-card.pug
+++ b/src/components/total-card/total-card.pug
@@ -1,7 +1,7 @@
 include ../input/input
 include ../button/button
 
-mixin totalCard()
+mixin totalCard(options = {})
   section.total-card
     .total-card__wrap
       .total-card__head
