--- a/src/components/total-card/total-card.pug
+++ b/src/components/total-card/total-card.pug
@@ -2,6 +2,14 @@ include ../input/input
 include ../button/button
 
 mixin totalCard(options = {})
+  -
+    const arrivalInputPlaceholder = options.arrivalInputPlaceholder
+      ? options.arrivalInputPlaceholder
+      : "19.08.2019";
+    const departureInputPlaceholder = options.departureInputPlaceholder
+      ? options.departureInputPlaceholder
+      : "23.08.2019";
+
   section.total-card
     .total-card__wrap
       .total-card__head
@@ -16,7 +24,7 @@ mixin totalCard(options = {})
           isButtonSplit: true,
           isDownSplitAnimation: true,
           iconSrc: "expand-more.svg",
-          placeholder: "19.08.2019",
+          placeholder: arrivalInputPlaceholder,
           isDarkPlaceholder: true
         })
         +input({
@@ -27,7 +35,7 @@ mixin totalCard(options = {})
           isButtonSplit: true,
           isDownSplitAnimation: true,
           iconSrc: "expand-more.svg",
-          placeholder: "23.08.2019",
+          placeholder: departureInputPlaceholder,
           isDarkPlaceholder: true
         })
         div(id="date-picker-container" class="date-picker-container")
