--- a/src/components/total-card/total-card.pug
+++ b/src/components/total-card/total-card.pug
@@ -5,10 +5,10 @@ mixin totalCard(options = {})
   -
     const arrivalInputPlaceholder = options.arrivalInputPlaceholder
       ? options.arrivalInputPlaceholder
-      : "19.08.2019";
+      : "ДД.ММ.ГГГГ";
     const departureInputPlaceholder = options.departureInputPlaceholder
       ? options.departureInputPlaceholder
-      : "23.08.2019";
+      : "ДД.ММ.ГГГГ";
 
   section.total-card
     .total-card__wrap
