--- a/src/page/cards/cards.pug
+++ b/src/page/cards/cards.pug
@@ -20,7 +20,10 @@ block content
           +registerCard()
       .cards-page__row
         .cards-page__item
-          +totalCard()
+          +totalCard({
+            arrivalInputPlaceholder: "19.08.2019",
+            departureInputPlaceholder: "23.08.2019"
+          })
         .cards-page__item
           +authCard()  
       .cards-page__row
@@ -50,4 +53,3 @@ block content
               { src: "../../components/hotel-card/double-hotel.png", alt: "Красивый отель" }
             ]
           })
-      
