подключил стили nouislider

--- a/src/page/rooms/rooms.scss
+++ b/src/page/rooms/rooms.scss
@@ -16,6 +16,7 @@
 @import "../../components/text-content/text-content.scss";
 @import "../../components/social-buttons/social-buttons.scss";
 @import "../../components/copyright/copyright.scss";
+@import "../../../node_modules/nouislider/distribute/nouislider.min.css";
 
 .rooms-page {
   .pagination {
