--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -1,13 +1,8 @@
 mixin rangeSlider(options = {})
   .range
-    .range__head
-      p.range__title= options.title
-      .range__head-range
-        p(class="range_value  range_value--min")= options.min + "₽" 
-        span -
-        p(class="range_value  range_value--max")= options.max + "₽" 
-    .range__wrap
-      .range__bar
-        div(class="range__scale" style="width: 27%;")
-      div(class="range__toggle  range__toggle--min")
-      div(class="range__toggle  range__toggle--max")
+    .range__view
+      h2.range__title= options.title
+      .range__price
+        p(id="lower-value" class="range__cost")
+        p(id="upper-value" class="range__cost")
+    div(id="range-slider" class="range__slider")
