--- a/src/page/form-elements/form-elements.pug
+++ b/src/page/form-elements/form-elements.pug
@@ -148,7 +148,7 @@ block content
               })
           div(class="ui-kit__column  ui-kit__column--xls")
             div(class="ui-kit__column-row  ui-kit__column-row--large")
-              +rangeSlider({ title: "Range Slider", min: "5 000", max: "10 000" })
+              +rangeSlider({ title: "Range Slider" })
             div(class="ui-kit__column-row  ui-kit__column-row--small")
               +title({ title: "Buttons" })
               +button({ title: "Click me" })
