подключил стили nouislider

--- a/src/page/form-elements/form-elements.scss
+++ b/src/page/form-elements/form-elements.scss
@@ -14,6 +14,7 @@
 @import "../../components/comment/comment";
 @import "../../components/drop-down/drop-down.scss";
 @import "../../components/logo/logo";
+@import "../../../node_modules/nouislider/distribute/nouislider.min.css";
 
 .ui-kit__wrap {
   padding-top: 62px;
