--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -178,7 +178,7 @@ block content
             })
             div(class="drop-down-container" id="drop-down-guest-container")
           .filter__item
-            +rangeSlider({ title: "Диапазон цены", min: "5 000", max: "10 000" })
+            +rangeSlider({ title: "Диапазон цены" })
             p.filter__explan Стоимость за сутки пребывания в номере
           .filter__item
             +checkbox({
