передаю в hotel-card по 4 изображения

--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -22,6 +22,9 @@ block variables
           starCount: 5,
           idRateBtn: "luxHotelRate",
           images: [
+            { src: "../../components/hotel-card/one-hotel.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/one-hotel.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/one-hotel.png", alt: "Красивый отель" },
             { src: "../../components/hotel-card/one-hotel.png", alt: "Красивый отель" }
           ]
         },
@@ -33,6 +36,9 @@ block variables
           starCount: 4,
           idRateBtn: "luxHotelRate1",
           images: [
+            { src: "../../components/hotel-card/double-hotel.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/double-hotel.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/double-hotel.png", alt: "Красивый отель" },
             { src: "../../components/hotel-card/double-hotel.png", alt: "Красивый отель" }
           ]
         },
@@ -45,6 +51,9 @@ block variables
           starCount: 3,
           idRateBtn: "luxHotelRate2",
           images: [
+            { src: "../../components/hotel-card/hotel-3.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-3.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-3.png", alt: "Красивый отель" },
             { src: "../../components/hotel-card/hotel-3.png", alt: "Красивый отель" }
           ]
         },
@@ -56,6 +65,9 @@ block variables
           starCount: 5,
           idRateBtn: "luxHotelRate3",
           images: [
+            { src: "../../components/hotel-card/hotel-4.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-4.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-4.png", alt: "Красивый отель" },
             { src: "../../components/hotel-card/hotel-4.png", alt: "Красивый отель" }
           ]
         },
@@ -67,6 +79,9 @@ block variables
           starCount: 4,
           idRateBtn: "luxHotelRate4",
           images: [
+            { src: "../../components/hotel-card/hotel-5.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-5.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-5.png", alt: "Красивый отель" },
             { src: "../../components/hotel-card/hotel-5.png", alt: "Красивый отель" }
           ]
         },
@@ -78,6 +93,9 @@ block variables
           starCount: 3,
           idRateBtn: "luxHotelRate5",
           images: [
+            { src: "../../components/hotel-card/hotel-6.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-6.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-6.png", alt: "Красивый отель" },
             { src: "../../components/hotel-card/hotel-6.png", alt: "Красивый отель" }
           ]
         },
@@ -89,6 +107,9 @@ block variables
           reviewCount: 45,
           idRateBtn: "luxHotelRate6",
           images: [
+            { src: "../../components/hotel-card/hotel-7.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-7.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-7.png", alt: "Красивый отель" },
             { src: "../../components/hotel-card/hotel-7.png", alt: "Красивый отель" }
           ]
         },
@@ -100,6 +121,9 @@ block variables
           reviewCount: 39,
           idRateBtn: "luxHotelRate7",
           images: [
+            { src: "../../components/hotel-card/hotel-8.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-8.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-8.png", alt: "Красивый отель" },
             { src: "../../components/hotel-card/hotel-8.png", alt: "Красивый отель" }
           ]
         },
@@ -111,6 +135,9 @@ block variables
           reviewCount: 77,
           idRateBtn: "luxHotelRate8",
           images: [
+            { src: "../../components/hotel-card/hotel-9.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-9.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-9.png", alt: "Красивый отель" },
             { src: "../../components/hotel-card/hotel-9.png", alt: "Красивый отель" }
           ]
         },
@@ -122,6 +149,9 @@ block variables
           reviewCount: 25,
           idRateBtn: "luxHotelRate9",
           images: [
+            { src: "../../components/hotel-card/hotel-10.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-10.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-10.png", alt: "Красивый отель" },
             { src: "../../components/hotel-card/hotel-10.png", alt: "Красивый отель" }
           ]
         },
@@ -133,6 +163,9 @@ block variables
           reviewCount: 15,
           idRateBtn: "luxHotelRate10",
           images: [
+            { src: "../../components/hotel-card/hotel-11.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-11.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-11.png", alt: "Красивый отель" },
             { src: "../../components/hotel-card/hotel-11.png", alt: "Красивый отель" }
           ]
         },
@@ -144,6 +177,9 @@ block variables
           reviewCount: 55,
           idRateBtn: "luxHotelRate11",
           images: [
+            { src: "../../components/hotel-card/hotel-12.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-12.png", alt: "Красивый отель" },
+            { src: "../../components/hotel-card/hotel-12.png", alt: "Красивый отель" },
             { src: "../../components/hotel-card/hotel-12.png", alt: "Красивый отель" }
           ]
         }
