организовал разметку под glide

--- a/src/components/hotel-card/hotel-card.pug
+++ b/src/components/hotel-card/hotel-card.pug
@@ -6,19 +6,18 @@ mixin hotelCard(options = {})
       ? "hotel-card__slider-control  hotel-card__slider-control--hide"
       : "hotel-card__slider-control";
   section.hotel-card
-    .hotel-card__wrap
-      .hotel-card__slider
-        .hotel-card__slider-pict
-          each item in options.images 
-            img(src=item.src, alt=item.alt)
-        .hotel-card__slider-pict-buttons
-          button(class="slider-btn-active" type="button")
-          button(type="button")
-          button(type="button")
-          button(type="button")
-        div(class=sliderBtnClass)
-          button(class="hotel-card__slider-btn" type="button") Назад
-          button(class="hotel-card__slider-btn  hotel-card__slider-btn--next" type="button") Вперед
+    div(class="hotel-card__wrap  glide")
+      div(class="hotel-card__slider  glide__track" data-glide-el="track")
+        ul.glide__slides
+          each image in options.images
+            li.glide__slide #[img(src=image.src, alt=image.alt)]
+        div(class="glide__arrows" data-glide-el="controls")
+          button(class="glide__arrow  glide__arrow--left  hotel-card__slider-btn" data-glide-dir="<" type="button") Назад
+          button(class="glide__arrow  glide__arrow--right  hotel-card__slider-btn  hotel-card__slider-btn--next" data-glide-dir=">" type="button") Вперед
+        div(class="hotel-card__bullets  glide__bullets" data-glide-el="controls[nav]")
+          button(class="glide__bullet" data-glide-dir="=0" type="button")
+          button(class="glide__bullet" data-glide-dir="=1" type="button")
+          button(class="glide__bullet" data-glide-dir="=2" type="button")
       .hotel-card__info
         .hotel-card__info-item
           if (options.isLux)
