--- a/src/components/hotel-card/hotel-card.pug
+++ b/src/components/hotel-card/hotel-card.pug
@@ -15,9 +15,8 @@ mixin hotelCard(options = {})
           button(class="glide__arrow  glide__arrow--left  hotel-card__slider-btn" data-glide-dir="<" type="button") Назад
           button(class="glide__arrow  glide__arrow--right  hotel-card__slider-btn  hotel-card__slider-btn--next" data-glide-dir=">" type="button") Вперед
         div(class="hotel-card__bullets  glide__bullets" data-glide-el="controls[nav]")
-          button(class="glide__bullet" data-glide-dir="=0" type="button")
-          button(class="glide__bullet" data-glide-dir="=1" type="button")
-          button(class="glide__bullet" data-glide-dir="=2" type="button")
+          each image, index in options.images
+            button(class="glide__bullet" data-glide-dir=`=${index}` type="button")
       .hotel-card__info
         .hotel-card__info-item
           if (options.isLux)
