добавил появление контролов слайдера при наведении на slider-card

--- a/src/components/hotel-card/hotel-card.scss
+++ b/src/components/hotel-card/hotel-card.scss
@@ -5,6 +5,13 @@
   background: $mainColor;
   border-radius: 4px;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+
+  &:hover {
+    .glide__arrows {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
 }
 
 .hotel-card__slider {
@@ -16,6 +23,12 @@
   img {
     border-radius: 4px 4px 0 0;
   }
+}
+
+.glide__arrows {
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.2s ease-in;
 }
 
 .hotel-card__bullets {
