передаю по 4 изображения в hotelCard

--- a/src/page/cards/cards.pug
+++ b/src/page/cards/cards.pug
@@ -39,6 +39,9 @@ block content
             starCount: 5,
             idRateBtn: "luxHotelRate",
             images: [
+              { src: "../../components/hotel-card/one-hotel.png", alt: "Красивый отель" },
+              { src: "../../components/hotel-card/one-hotel.png", alt: "Красивый отель" },
+              { src: "../../components/hotel-card/one-hotel.png", alt: "Красивый отель" },
               { src: "../../components/hotel-card/one-hotel.png", alt: "Красивый отель" }
             ]
           })
@@ -50,6 +53,9 @@ block content
             starCount: 4,
             idRateBtn: "hotelRate",
             images: [
+              { src: "../../components/hotel-card/double-hotel.png", alt: "Красивый отель" },
+              { src: "../../components/hotel-card/double-hotel.png", alt: "Красивый отель" },
+              { src: "../../components/hotel-card/double-hotel.png", alt: "Красивый отель" },
               { src: "../../components/hotel-card/double-hotel.png", alt: "Красивый отель" }
             ]
           })
