--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -201,6 +201,7 @@ block content
               placeholder: "19 авг - 23 авг",
               isBigLabel: true
             })
+             div(class="date-picker-container" id="date-picker-container")
           .filter__item
             +input({
               id: "number-guest",
