подключил стили date-picker

--- a/src/page/rooms/rooms.scss
+++ b/src/page/rooms/rooms.scss
@@ -4,6 +4,7 @@
 @import "../../components/button/button.scss";
 @import "../../components/main-menu/main-menu.scss";
 @import "../../components/date-wishes/date-wishes.scss";
+@import "../../components/date-picker/date-picker.scss";
 @import "../../components/drop-down/drop-down.scss";
 @import "../../components/input/input.scss";
 @import "../../components/hotel-card/hotel-card.scss";
