задал стили для date-picker в rooms

--- a/src/page/rooms/rooms.scss
+++ b/src/page/rooms/rooms.scss
@@ -23,6 +23,14 @@
   .pagination {
     text-align: center;
   }
+
+  .date-picker-container {
+    position: relative;
+  }
+
+  .date-picker {
+    top: 203px;
+  }
 }
 
 .rooms-page__wrap {
