поменял id для инпута date-picker в rooms

--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -192,7 +192,7 @@ block content
         .filter__wrap
           div(class="filter__item  filter__item--mbs")
             +input({
-              id: "number-guests-input",
+              id: "date-picker-input",
               isFakeInput: true,
               labelName: "Даты пребывания в отеле",
               isButtonSplit: true,
@@ -201,7 +201,7 @@ block content
               placeholder: "19 авг - 23 авг",
               isBigLabel: true
             })
-             div(class="date-picker-container" id="date-picker-container")
+            div(class="date-picker-container" id="date-picker-container")
           .filter__item
             +input({
               id: "number-guest",
