переместил атрибут id ближе, чем класс

--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -201,7 +201,7 @@ block content
               placeholder: "19 авг - 23 авг",
               isBigLabel: true
             })
-            div(class="date-picker-container" id="date-picker-container")
+            div(id="date-picker-container" class="date-picker-container")
           .filter__item
             +input({
               id: "number-guest",
