заменил placeholder у date-picker input

--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -198,7 +198,7 @@ block content
               isButtonSplit: true,
               isDownSplitAnimation: true,
               isHaveIcon: true,
-              placeholder: "19 авг - 23 авг",
+              placeholder: "Выберите дату",
               isBigLabel: true
             })
             div(id="date-picker-container" class="date-picker-container")
