опустил date-picker для devise size max-width: 380px

--- a/src/page/room-details/room-details.scss
+++ b/src/page/room-details/room-details.scss
@@ -198,3 +198,9 @@
     padding-right: 20px;
   }
 }
+
+@media (max-width: 380px) {
+  .room-details .date-picker-container {
+    top: 350px;
+  }
+}
