--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -27,9 +27,9 @@
   left: 50%;
   z-index: 100;
   box-sizing: border-box;
-  width: 320px;
+  width: 100%;
   margin-top: -200px;
-  margin-left: -160px;
+  margin-left: -50%;
   background-color: $mainColor;
   border: 1px solid rgba(31, 32, 65, 0.25);
   border-radius: 4px;
@@ -217,6 +217,19 @@
     &:hover {
       color: transparentize($contentColor, 0.5);
     }
+  }
+}
+
+.date-picker-container {
+  position: absolute;
+  width: 100%;
+  left: 50%;
+  margin-left: -50%;
+}
+
+@media (max-width: 320px) {
+  .date-picker__day {
+    height: 30px;
   }
 }
 
