--- a/src/page/form-elements/form-elements.scss
+++ b/src/page/form-elements/form-elements.scss
@@ -16,180 +16,8 @@
 @import "../../components/logo/logo";
 @import "../../../node_modules/nouislider/distribute/nouislider.min.css";
 
-.ui-kit__wrap {
-  padding-top: 62px;
-  padding-left: 1px;
-  padding-bottom: 62px;
-}
-
-.ui-kit__box {
-  display: flex;
-  margin-bottom: 100px;
-
-  &--nm {
-    margin-bottom: 0px;
-  }
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.ui-kit__inputs {
-  width: 320px;
-
-  .input-group {
-    margin-bottom: 20px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-}
-
-.ui-kit__column {
+.form-elements #drop-down-container,
+.form-elements #drop-down-container2,
+.form-elements #drop-down-container3 {
   position: relative;
-  width: 265px;
-  margin-left: 126px;
-
-  &--mls {
-    margin-left: 181px;
-  }
-
-  &--wl {
-    width: 320px;
-  }
-
-  &--xls {
-    width: 263px;
-    margin-left: 127px;
-  }
-
-  &--lms {
-    margin-left: 72px;
-  }
-
-  &:first-child {
-    margin-left: 0;
-  }
-
-  .input-group {
-    margin-bottom: 20px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  .comment {
-    margin-left: 4px;
-  }
-}
-
-.ui-kit__column-row {
-  margin-bottom: 40px;
-  font-size: 0;
-
-  &--large {
-    margin-bottom: 55px;
-  }
-
-  &--bunny-hop {
-    margin-top: 255px;
-  }
-
-  &--mt-large {
-    margin-top: 171px;
-    margin-bottom: 46px;
-  }
-
-  &--small {
-    margin-bottom: 30px;
-  }
-
-  .button {
-    margin-right: 20px;
-    padding: 14px 23px;
-    font-weight: bold;
-  }
-
-  .button--empty-style {
-    padding: 13px 21px;
-  }
-
-  .bullet__item {
-    width: 237px;
-  }
-}
-
-.ui-kit__inputs-column {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 42px;
-
-  .input-group {
-    margin-bottom: 0;
-    margin-right: 20px;
-
-    &:last-child {
-      margin-right: 0;
-    }
-  }
-
-  .input-group__button-split {
-    width: 66px;
-  }
-}
-
-.ui-kit__inputs-column--small {
-  width: 266px;
-
-  .input-group__button-split {
-    width: 55px;
-  }
-}
-
-.ui-kit__column-row--lwidth {
-  width: 320px;
-
-  .button {
-    width: 100%;
-  }
-}
-
-.ui-kit__link {
-  display: inline-block;
-  margin-right: 20px;
-  vertical-align: top;
-  color: transparentize($contentColor, 0.5);
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 15px;
-  text-transform: uppercase;
-  text-decoration: none;
-  transition: color 0.3s ease-in-out;
-
-  &:last-child {
-    margin-right: 0;
-  }
-
-  &--hover,
-  &:hover {
-    color: $accentColor;
-  }
-}
-
-.ui-kit__box #drop-down-container {
-  .drop-down {
-    top: 345px;
-  }
-}
-
-.ui-kit__box #drop-down-container2,
-.ui-kit__box #drop-down-container3 {
-  .drop-down {
-    top: 261px;
-  }
 }
