--- a/src/page/form-elements/form-elements.scss
+++ b/src/page/form-elements/form-elements.scss
@@ -16,6 +16,139 @@
 @import "../../components/logo/logo";
 @import "../../../node_modules/nouislider/distribute/nouislider.min.css";
 
+.form-elements__wrap {
+  padding-top: 62px;
+}
+
+.form-elements__row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  &:first-child {
+    margin-bottom: 100px;
+  }
+}
+
+.form-elements__inputs {
+  width: 27.6%;
+
+  .input-group {
+    margin-bottom: 20px;
+
+    &:nth-child(3) {
+      margin-bottom: 23px;
+    }
+  }
+}
+
+.form-elements__inputs-column {
+  display: flex;
+  margin-top: 40px;
+  margin-bottom: 21px;
+
+  .input-group:first-child {
+    margin-right: 20px;
+  }
+
+  .input-group__button-split {
+    width: 60px;
+  }
+}
+
+.form-elements__inputs-small {
+  width: 266px;
+
+  .input-group {
+    margin-bottom: 41px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.form-elements__controls {
+  width: 22.9%;
+
+  .checkbox {
+    margin-bottom: 40.88px;
+  }
+
+  .radiobtn {
+    margin-bottom: 42px;
+  }
+
+  .toggle {
+    margin-bottom: 46px;
+  }
+
+  .likebtn {
+    margin-bottom: 40px;
+  }
+}
+
+.form-elements__user-button {
+  width: 27.7%;
+
+  .range {
+    width: 82.8%;
+    margin-bottom: 42px;
+  }
+}
+
+.form-elements__buttons {
+  .button {
+    padding: 14px 20px;
+    font-weight: bold;
+
+    &--empty-style {
+      padding: 12px 17px;
+    }
+
+    &::last-child {
+      margin-right: 0;
+    }
+  }
+}
+
+.form-elements__full-button {
+  margin-bottom: 30px;
+
+  .button {
+    margin-right: 13px;
+  }
+}
+
+.form-elements__empty-button {
+  margin-bottom: 31px;
+
+  .button {
+    margin-right: 17px;
+  }
+}
+
+.form-elements__links {
+  margin-bottom: 30px;
+
+  .button {
+    padding: 0;
+    margin-right: 18px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
+.form-elements__submit-btn {
+  margin-bottom: 41px;
+
+  .button {
+    width: 100%;
+  }
+}
+
 .form-elements #drop-down-container,
 .form-elements #drop-down-container2,
 .form-elements #drop-down-container3 {
