--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -1,6 +1,6 @@
 .pagination__title {
   margin: 0;
-  margin-bottom: 18px;
+  margin-bottom: 16px;
   font-size: 12px;
   line-height: 15px;
   font-family: "Montserrat", "Arial", sans-serif;
@@ -22,8 +22,7 @@
   a {
     box-sizing: border-box;
     display: inline-block;
-    width: 40px;
-    height: 40px;
+    width: 36px;
     padding: 12px 0px;
     text-align: center;
     vertical-align: middle;
@@ -38,8 +37,12 @@
 
 .pagination__page-item--active {
   a {
+    width: 40px;
+    height: 40px;
     color: $mainColor;
     font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
     background: linear-gradient(180deg, $accentColor 0%, $accentGradColor 100%);
     border-radius: 50%;
   }
@@ -47,8 +50,11 @@
 
 .pagination__page-next {
   position: relative;
+  margin-left: -2px;
 
   a {
+    width: 40px;
+    height: 40px;
     color: $mainColor;
     font-size: 0;
     font-weight: bold;
