--- a/src/page/form-elements/form-elements.pug
+++ b/src/page/form-elements/form-elements.pug
@@ -156,7 +156,7 @@ block content
               +button({ title: "Перейти к оплате", isHaveIcon: true, buttonType: "submit" })
           +pagination({ title: "Pagination" })
       .form-elements__row
-        div(id="drop-down-container" class="form-elements__drop-down-expand")
+        .form-elements__drop-down-expand
           +input({
             id: "number-guests-input1",
             isFakeInput: true,
@@ -179,6 +179,7 @@ block content
             isBigLabel: true,
             descrText: "Expanded"
           })
+          div(id="drop-down-container" class="drop-down-container")
           .form-elements__exp-checkbox-close
             +checkbox({
               title: "Expandable checkbox list",
@@ -200,7 +201,7 @@ block content
                 { id: "shampu2", title: "Шампунь" },
               ]
             })
-        div(id="drop-down-container2" class="form-elements__drop-down-rich")
+        .form-elements__drop-down-rich
           +input({
             id: "number-guests-input3",
             isFakeInput: true,
@@ -211,6 +212,7 @@ block content
             placeholder: "Сколько гостей",
             isBigLabel: true
           })
+          div(id="drop-down-container2" class="drop-down-container")
           .form-elements__bunny-hop
             +checkbox({
               title: "Rich Checkbox Buttons",
@@ -228,7 +230,7 @@ block content
                 }
               ]
             })
-        div(id="drop-down-container3" class="form-elements__drop-down-bullet")
+        .form-elements__drop-down-bullet
           +input({
             id: "number-guests-input4",
             isFakeInput: true,
@@ -239,6 +241,7 @@ block content
             placeholder: "Сколько гостей",
             isBigLabel: true
           })
+          div(id="drop-down-container3" class="drop-down-container")
           .form-elements__bunny-hop
             +bullet({
               title: "Bullet list",
