добавил margin-bottom для второго form-elements__row

--- a/src/page/form-elements/form-elements.scss
+++ b/src/page/form-elements/form-elements.scss
@@ -28,6 +28,10 @@
   &:first-child {
     margin-bottom: 100px;
   }
+
+  &:nth-child(2) {
+    margin-bottom: 40px;
+  }
 }
 
 .form-elements__inputs {
