сделал лайк активным

--- a/src/page/form-elements/form-elements.pug
+++ b/src/page/form-elements/form-elements.pug
@@ -272,6 +272,7 @@ block content
             authorName: "Мурад Сарафанов",
             datePost: "5 дней назад",
             like: 12,
+            isLikeActive: true,
             avatarSrc: "../../components/comment/murad.png",
             text:
               "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."
