добавил размеры для features и comment

--- a/src/page/form-elements/form-elements.scss
+++ b/src/page/form-elements/form-elements.scss
@@ -218,6 +218,14 @@
   }
 }
 
+.form-elements__features {
+  width: 24.2%;
+}
+
+.form-elements__comment {
+  width: 61.3%;
+}
+
 .form-elements #drop-down-container,
 .form-elements #drop-down-container2,
 .form-elements #drop-down-container3 {
