--- a/src/components/total-card/total-card.pug
+++ b/src/components/total-card/total-card.pug
@@ -12,55 +12,56 @@ mixin totalCard(options = {})
 
   section.total-card
     .total-card__wrap
-      .total-card__head
-        h2.total-card__title № #[span 888] #[b люкс]
-        p.total-card__per-day #[b 9 990₽] в сутки
-      .total-card__date-inputs
+      form()
+        .total-card__head
+          h2.total-card__title № #[span 888] #[b люкс]
+          p.total-card__per-day #[b 9 990₽] в сутки
+        .total-card__date-inputs
+          +input({
+            id: "arrival-total-input",
+            splitId: "arrival-total-split-btn",
+            labelName: "Прибытие",
+            isBigLabel: true,
+            isButtonSplit: true,
+            isDownSplitAnimation: true,
+            iconSrc: "expand-more.svg",
+            placeholder: arrivalInputPlaceholder,
+            isDarkPlaceholder: true
+          })
+          +input({
+            id: "departure-total-input",
+            splitId: "departure-total-split-btn",
+            labelName: "Выезд",
+            isBigLabel: true,
+            isButtonSplit: true,
+            isDownSplitAnimation: true,
+            iconSrc: "expand-more.svg",
+            placeholder: departureInputPlaceholder,
+            isDarkPlaceholder: true
+          })
+          div(id="date-picker-container" class="date-picker-container")
         +input({
-          id: "arrival-total-input",
-          splitId: "arrival-total-split-btn",
-          labelName: "Прибытие",
+          id: "number-total-guests-input",
+          isFakeInput: true,
+          labelName: "Гости",
           isBigLabel: true,
           isButtonSplit: true,
           isDownSplitAnimation: true,
-          iconSrc: "expand-more.svg",
-          placeholder: arrivalInputPlaceholder,
-          isDarkPlaceholder: true
+          isHaveIcon: true,
+          placeholder: "3 гостя"
         })
-        +input({
-          id: "departure-total-input",
-          splitId: "departure-total-split-btn",
-          labelName: "Выезд",
-          isBigLabel: true,
-          isButtonSplit: true,
-          isDownSplitAnimation: true,
-          iconSrc: "expand-more.svg",
-          placeholder: departureInputPlaceholder,
-          isDarkPlaceholder: true
-        })
-        div(id="date-picker-container" class="date-picker-container")
-      +input({
-        id: "number-total-guests-input",
-        isFakeInput: true,
-        labelName: "Гости",
-        isBigLabel: true,
-        isButtonSplit: true,
-        isDownSplitAnimation: true,
-        isHaveIcon: true,
-        placeholder: "3 гостя"
-      })
-      div(class="drop-down-container" id="drop-down-total-container")
-      .total-card__calc
-        .total-card__calc-item
-          p.total-card__calc-text 9 990₽ х 4 суток
-          p.total-card__calc-cost 39 960₽
-        div(class="total-card__calc-item  total-card__calc-item--mbx")
-          p(class="total-card__calc-text  total-card__calc-text--extend") Сбор за услуги: скидка 2 179₽
-          p.total-card__calc-cost 0₽
-        .total-card__calc-item
-          p(class="total-card__calc-text  total-card__calc-text--lhs  total-card__calc-text--extend") Сбор за дополнительные услуги
-          p.total-card__calc-cost 300₽
-      .total-card__total
-        p.total-card__total-text Итого
-        p.total-card__total-price 38 081₽
-      +button({ title: "Забронировать", isHaveIcon: true, buttonType: "button" })
+        div(class="drop-down-container" id="drop-down-total-container")
+        .total-card__calc
+          .total-card__calc-item
+            p.total-card__calc-text 9 990₽ х 4 суток
+            p.total-card__calc-cost 39 960₽
+          div(class="total-card__calc-item  total-card__calc-item--mbx")
+            p(class="total-card__calc-text  total-card__calc-text--extend") Сбор за услуги: скидка 2 179₽
+            p.total-card__calc-cost 0₽
+          .total-card__calc-item
+            p(class="total-card__calc-text  total-card__calc-text--lhs  total-card__calc-text--extend") Сбор за дополнительные услуги
+            p.total-card__calc-cost 300₽
+        .total-card__total
+          p.total-card__total-text Итого
+          p.total-card__total-price 38 081₽
+        +button({ title: "Забронировать", isHaveIcon: true, buttonType: "submit" })
