удалил - вконце дефолтного id

--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -1,5 +1,5 @@
 mixin logo(options = {})
-  - const logoId = options.id ? options.id : "logo-id-";
+  - const logoId = options.id ? options.id : "logo-id";
 
   if (options.isBig) 
     div(class="logo logo--big")
