передаю id в logo

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -102,7 +102,7 @@ mixin footer(options = {})
     .container
       if(options.isShort)
         div(class="page-footer__wrap  page-footer__wrap--short")
-          +logo()
+          +logo({ id: "footer-logo" })
           +textContent({ text: logoText })
           +socialButtons()
       else
