--- a/src/components/input/input.pug
+++ b/src/components/input/input.pug
@@ -1,5 +1,6 @@
 mixin input(options = {})
   -
+    const inputId = options.id ? options.id : "input-id";
     const inputGroupClass = options.labelName
       ? "input-group  input-group--column"
       : "input-group";
@@ -48,22 +49,22 @@ mixin input(options = {})
 
     if options.labelName
       div(class=inputGroupClass)
-        p(class=labelClass id=`for-${options.id}`)= options.labelName
+        p(class=labelClass id=`for-${inputId}`)= options.labelName
         if options.descrText
           p.input-group__descr= options.descrText
-        div(id=`${options.id}` class=`${inputFakeClass}` type=options.type name=options.name)= options.placeholder
+        div(id=`${inputId}` class=`${inputFakeClass}` type=options.type name=options.name)= options.placeholder
   else if options.isButtonSplit
     div(class=inputGroupClass)
       if options.labelName
-        label(class=labelClass for=`${options.id}`)= options.labelName
+        label(class=labelClass for=`${inputId}`)= options.labelName
       p.input-group__split
-        input(id=`${options.id}` class=inputClass type=options.type name=options.name placeholder=options.placeholder)
+        input(id=`${inputId}` class=inputClass type=options.type name=options.name placeholder=options.placeholder)
         button(id=`${options.splitId}` class=`${splitButtonClass}` type="button")
           img(src=`../../components/input/${options.iconSrc}`, alt="")
   else
     div(class=inputGroupClass)
       if options.labelName
-        label(class=labelClass for=`${options.id}`)= options.labelName
+        label(class=labelClass for=`${inputId}`)= options.labelName
       if options.descrText
         p.input-group__descr= options.descrText
-      input(id=`${options.id}` class=inputClass type=options.type name=options.name placeholder=options.placeholder)
+      input(id=`${inputId}` class=inputClass type=options.type name=options.name placeholder=options.placeholder)
